# sqlterm

./: .dockerignore  .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  RELEASE.md  build_test.sh  debug_integer_types.md  debug_test.sh  debug_type_mapping.rs  demo.sh  demo_queries.sql  demo_query_execution.sh  demo_table_details.sh  docker-compose.yml  go.mod  go.sum  podman-compose.yml  test_ai_wizard.md  test_build.rs  test_build.sh  test_conversation.rs  test_query_execution_fix.sh  test_quit.sh  test_tui.sh
.github/workflows/: build-release.yml  ci.yml
cmd/sqlterm/: main.go
crates/sqlterm-cli/: Cargo.toml
crates/sqlterm-cli/src/: main.rs
crates/sqlterm-core/: Cargo.toml
crates/sqlterm-core/src/: config.rs  connection.rs  error.rs  factory.rs  lib.rs  query.rs  result.rs  schema.rs
crates/sqlterm-mysql/: Cargo.toml
crates/sqlterm-mysql/src/: connection.rs  lib.rs  query.rs  schema.rs  tests.rs
crates/sqlterm-postgres/: Cargo.toml
crates/sqlterm-postgres/src/: connection.rs  lib.rs  query.rs  schema.rs  tests.rs
crates/sqlterm-sqlite/: Cargo.toml
crates/sqlterm-sqlite/src/: connection.rs  lib.rs  query.rs  schema.rs  tests.rs
crates/sqlterm-ui/: Cargo.toml
crates/sqlterm-ui/src/: app.rs  components.rs  config.rs  conversation.rs  conversation_simple.rs  events.rs  lib.rs  main.rs  main_backup.rs  ui.rs
data/: testdb.sqlite
docker/bastion/: Dockerfile  sshd_config
docker/mysql/init/: 01-create-tables.sql
docker/postgres/init/: 01-create-tables.sql
docker/sqlite/: create_db.sh  init.sql
infra/docker/: COMPLETION_CHECKLIST.md  Dockerfile  README.md  build.sh  docker-compose.yml  validate.sh
internal/ai/: config.go  lmstudio.go  manager.go  ollama.go  openrouter.go  types.go  types_test.go  usage.go  usage_example.go  vectordb.go
internal/cli/: root.go  root_test.go
internal/config/: config.go  config_test.go  manager.go  types.go
internal/conversation/: app.go  app_test.go  autocomplete.go  autocomplete_test.go
internal/core/: connection.go  export.go  markdown.go  sqlformatter.go  sqlformatter_test.go  types.go  types_test.go
internal/i18n/: en_au.json  messages.go  messages_test.go  zh_cn.json
internal/session/: manager.go  manager_test.go
internal/utils/: id_gen.go
queries/: test_001.sql  test_002.sql
