[workspace]
members = [
    "crates/sqlterm-core",
    "crates/sqlterm-mysql",
    "crates/sqlterm-postgres",
    "crates/sqlterm-sqlite",
    "crates/sqlterm-ui",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Database drivers
sqlx = { version = "0.7", features = ["runtime-tokio-rustls"] }
rusqlite = "0.30"

# Terminal UI
ratatui = "0.24"
crossterm = "0.27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
dirs = "5.0"

# Additional dependencies
regex = "1.0"
rpassword = "7.0"
chrono = { version = "0.4", features = ["serde"] }
rustyline = "13.0"

# SSH
russh = "0.40"
russh-keys = "0.40"
