[package]
name = "sqlterm-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sqlterm"
path = "src/main.rs"

[dependencies]
sqlterm-core = { path = "../sqlterm-core" }
sqlterm-mysql = { path = "../sqlterm-mysql" }
sqlterm-postgres = { path = "../sqlterm-postgres" }
sqlterm-sqlite = { path = "../sqlterm-sqlite" }
sqlterm-ui = { path = "../sqlterm-ui" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossterm = { workspace = true }
