[package]
name = "sqlterm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
