[package]
name = "sqlterm-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlterm-core = { path = "../sqlterm-core" }
sqlx = { workspace = true, features = ["sqlite", "chrono"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
