[package]
name = "sqlterm-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlterm-core = { path = "../sqlterm-core" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
